src/objects/pymt__Settings__c.object
<CustomObject>
    <customHelpPage>pymt__Help</customHelpPage>
    <description>The master settings object for PaymentConnect.</description>
    <fields>
        <fullName>pymt__Admin_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deprecated</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PaymentConnect_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Apex_Test_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables debug output to Log Entries under PaymentConnect General Settings and under each individual Processor Connection record.</inlineHelpText>
        <label>Debug Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Assign_Events_To__c</fullName>
        <label>Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin User</fullName>
                    <default>true</default>
                    <label>Admin User</label>
                </value>
                <value>
                    <fullName>Record Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__AuthNet_Direct_Response_Delim__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>|</fullName>
                    <default>true</default>
                    <label>|</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__AuthNet_Enable_Echecks__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__AuthNet_Login_Id__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__AuthNet_Notification_Relay_Method__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visualforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__AuthNet_Relay_Script__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__AuthNet_Test_Login_Id__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__AuthNet_Test_Trans_Key__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__AuthNet_Trans_Key__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Auto_Attach_Products__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Auto_Attach__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact using email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Auto_Create_Cart_Items__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Auto_Create_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Category_Split_Expression__c</fullName>
        <description>Optional JSON string defining the suggested Category splits for payments when completed.</description>
        <inlineHelpText>Optional JSON string defining the suggested Category splits for payments when completed.</inlineHelpText>
        <label>Category Split Expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Category_Split_Name__c</fullName>
        <description>This picklist may be edited by the PaymentConnect administrator to add names matching category split settings that have been configured in the PaymentConnect Admin area.</description>
        <inlineHelpText>Application-wide setting for category splits.  Pick the name of the category split expression stored in your instance of Salesforce that you want to apply to completed payments.</inlineHelpText>
        <label>Category Split Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Don&apos;t Auto-Split</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Enable_Category_Split_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the CategorySplit trigger.</description>
        <inlineHelpText>Enables the CategorySplit trigger.</inlineHelpText>
        <label>Enable Category Split Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Enable_Shipping_Calc_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables triggers that calculate the shipping amount on payments when the Trigger_Shipping_Calc__c checkbox is set.</description>
        <inlineHelpText>Enables triggers that calculate the shipping amount on payments when the Trigger_Shipping_Calc__c checkbox is set.</inlineHelpText>
        <label>Enable Shipping Calc Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Enable_Tax_Calc_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables triggers that calculate taxes on payments when the Trigger_Tax_Calc__c checkbox is set.</description>
        <inlineHelpText>Enables triggers that calculate taxes on payments when the Trigger_Tax_Calc__c checkbox is set.</inlineHelpText>
        <label>Enable Tax Calc Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__External_Transactions__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leave Unattached</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Gateway_Simulation_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When the Test Mode box is checked, this option allows you to run test transactions without actually sending transactions to payment processor gateway.</inlineHelpText>
        <label>Gateway Simulation Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Google_Merchant_Id__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Google_Merchant_Key__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Google_Notification_Relay_Method__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visualforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Google_Relay_Script__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Google_Test_Merchant_Id__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Google_Test_Merchant_Key__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Orphaned_Payments__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Keep</fullName>
                    <default>true</default>
                    <label>Keep</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__PP_API_Password__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__PP_API_Signature__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pymt__PP_API_Username__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__PP_Currency_Code__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                    <label>USD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__PP_Notification_Relay_Method__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visualforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__PP_Relay_Script__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__PP_Test_API_Password__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__PP_Test_API_Signature__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pymt__PP_Test_API_Username__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Payment_Processor__c</fullName>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PayPal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Tax__c</fullName>
        <inlineHelpText>Default tax percentage to display in payment terminal.</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pymt__Test_Mode__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Field deprecated.</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Transaction_Logging__c</fullName>
        <inlineHelpText>Controls the level of detail in log entries for each transaction.</inlineHelpText>
        <label>Transaction Logging</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detailed</fullName>
                    <default>true</default>
                    <label>Detailed</label>
                </value>
                <value>
                    <fullName>Brief</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Update_Opp_Fields__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the trigger to auto-update payment-related fields on opportunities.</inlineHelpText>
        <label>Update Opportunity Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Update_Shopping_Cart_Items__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the auto-update of related shopping cart items when a payment record is processed.</inlineHelpText>
        <label>Update Shopping Cart Items</label>
        <type>Checkbox</type>
    </fields>
    <label>PaymentConnect Settings</label>
    <listViews>
        <fullName>pymt__All</fullName>
        <columns>NAME</columns>
        <columns>pymt__Transaction_Logging__c</columns>
        <columns>pymt__Gateway_Simulation_Mode__c</columns>
        <columns>pymt__Update_Opp_Fields__c</columns>
        <columns>pymt__Update_Shopping_Cart_Items__c</columns>
        <columns>pymt__Admin_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PaymentConnect Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>